@@ -1,3 +1,7 @@
+	* fixed html output format. In qgama widget QtTextEdit rendered
+	wrong tables with colspan attributes an all <td> tags had to be
+	written explicitly. Occured in table of adjusted coordinates.
+
 	* changed spelling homogenised to homogenized
 
 	* Explicit initialization of pointer members in g3::Model constructor
